added testing main for uhash

--- a/SimplePerfectHash/SimplePerfectHash/SimplePerfectHash.vcxproj
+++ b/SimplePerfectHash/SimplePerfectHash/SimplePerfectHash.vcxproj
@@ -142,6 +142,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="SUH.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="testmain.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
