Added simple testing main

--- a/SimplePerfectHash/SimplePerfectHash/SimplePerfectHash.vcxproj
+++ b/SimplePerfectHash/SimplePerfectHash/SimplePerfectHash.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="SPH.h" />
     <ClInclude Include="SUH.h" />
   </ItemGroup>
   <ItemGroup>
