--- a/SimplePerfectHash/SimplePerfectHash/SimplePerfectHash.vcxproj.filters
+++ b/SimplePerfectHash/SimplePerfectHash/SimplePerfectHash.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="SUH.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SPH.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="testmain.cpp">
