--- a/modules/perfect-hash/CMakeLists.txt
+++ b/modules/perfect-hash/CMakeLists.txt
@@ -3,7 +3,7 @@ get_filename_component(DIR_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
 set(MODULE      "${DIR_NAME}")
 set(LIBRARY     "lib_${MODULE}")
 set(TESTS       "test_${MODULE}")
-set(APPLICATION "app_${MODULE}")
+set(BENCHMARK "benchmark_${MODULE}")
 
 # Include directory with public headers
 include_directories("./")
@@ -11,4 +11,4 @@ include_directories("./")
 # Add all submodules
 add_subdirectory(src)
 add_subdirectory(test)
-
+add_subdirectory(benchmark)
